--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node server.js",
+    "start": "babel-node src/server.js",
     "build": "webpack -p --progress",
-    "dev": "webpack --progress --color --watch & nodemon server.js",
-    "foo": "nodemon server.js",
+    "dev": "webpack --progress --color --watch & nodemon src/server.js",
+    "foo": "nodemon src/server.js",
     "lint": "eslint --ext js,jsx ."
   },
   "author": "",
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.11.1",
     "hapi": "^15.0.2",
     "hapi-react-views": "^9.1.1",
+    "hapi-webpack-plugin": "^1.3.0",
     "inert": "^4.0.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
@@ -34,7 +35,6 @@
     "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.2.0",
     "eslint-plugin-react": "^6.2.0",
-    "hapi-webpack-plugin": "^1.3.0",
     "nodemon": "^1.10.2"
   }
 }
